plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.0'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.desertskyrangers'
version = '1.3.1'

java {
	sourceCompatibility = JavaVersion.VERSION_17
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	testcontainersVersion= '1.19.3'
	jjwtVersion = '0.12.3'
	mapstructVersion='1.5.5.Final'
}

dependencies {
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	//implementation 'org.springframework.boot:spring-boot-starter-actuator'
	//implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	//implementation 'org.springframework.session:spring-session-core'
	implementation'com.twilio.sdk:twilio:9.14.1'
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.1'
	implementation 'io.pebbletemplates:pebble-spring-boot-starter:3.2.2'
	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
	implementation "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
	implementation "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"
	implementation "org.mapstruct:mapstruct:${mapstructVersion}"

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.h2database:h2'
}

dependencyManagement {
	imports {
		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
	}
}

configurations {
	configureEach {
		exclude group: 'com.fasterxml.jackson.dataformat', module: 'jackson-dataformat-xml'
	}
}

test {
	useJUnitPlatform()
}

springBoot {
	buildInfo()
}

bootJar {
	launchScript()
}

processResources {
	filesMatching('*.yml') {
		expand 'version': project.property('version')
	}
}
